--- a/TIL to Code/TIL to Code/Base.lproj/Main.storyboard
+++ b/TIL to Code/TIL to Code/Base.lproj/Main.storyboard
@@ -9,39 +9,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Home-->
-        <scene sceneID="oFC-mR-iTU">
-            <objects>
-                <tableViewController id="cnA-1D-S95" customClass="Home" customModule="TIL_to_Code" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="CFC-rJ-rv5">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="8Yt-1d-JZh">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8Yt-1d-JZh" id="6X7-0u-364">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="cnA-1D-S95" id="ErE-pK-0oL"/>
-                            <outlet property="delegate" destination="cnA-1D-S95" id="V0A-lF-Y4K"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Home" id="ewn-fX-Zu6"/>
-                    <connections>
-                        <segue destination="YoQ-ay-g4G" kind="show" identifier="showMaster" id="LgJ-WM-KvA"/>
-                        <segue destination="wq5-NQ-Tia" kind="show" identifier="showCreate" id="09k-0m-4fr"/>
-                    </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="16a-Ta-cIN" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-716" y="134"/>
-        </scene>
         <!--Create Snippet View-->
         <scene sceneID="IZt-cF-XMd">
             <objects>
@@ -51,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="dvD-fK-PrJ" userLabel="TitleStack">
-                                <rect key="frame" x="20" y="74" width="335" height="55.5"/>
+                                <rect key="frame" x="20" y="30" width="335" height="55.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Odz-32-cAf">
                                         <rect key="frame" x="0.0" y="0.0" width="335" height="20.5"/>
@@ -72,7 +39,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Xbe-UT-ph2" userLabel="DescStack">
-                                <rect key="frame" x="20" y="139.5" width="335" height="55.5"/>
+                                <rect key="frame" x="20" y="95.5" width="335" height="55.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dN3-CX-KEe">
                                         <rect key="frame" x="0.0" y="0.0" width="335" height="20.5"/>
@@ -93,7 +60,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="aIq-6U-58N" userLabel="CodeStack">
-                                <rect key="frame" x="20" y="207" width="335" height="326"/>
+                                <rect key="frame" x="20" y="163" width="335" height="370"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Code Snippet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kIC-7X-Nb7">
                                         <rect key="frame" x="0.0" y="0.0" width="335" height="20.5"/>
@@ -102,7 +69,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="code snipspet here" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="UCV-TD-fsu">
-                                        <rect key="frame" x="0.0" y="25.5" width="335" height="300.5"/>
+                                        <rect key="frame" x="0.0" y="25.5" width="335" height="344.5"/>
                                         <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -145,11 +112,12 @@
                         <outlet property="snippetDescription" destination="1Sg-EM-a2g" id="rtY-vX-lZL"/>
                         <outlet property="snippetTitle" destination="Qn3-Ng-Ymd" id="tSO-6B-10j"/>
                         <outlet property="snippetTxtArea" destination="UCV-TD-fsu" id="dX5-VD-hIV"/>
+                        <segue destination="YoQ-ay-g4G" kind="show" identifier="createToMaster" id="fLu-HT-KPP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="45C-KE-1Gm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="84" y="131.78410794602701"/>
+            <point key="canvasLocation" x="542" y="-175"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ohe-m5-Kx9">
@@ -160,7 +128,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="cnA-1D-S95" kind="relationship" relationship="rootViewController" id="zBc-cT-Obd"/>
+                        <segue destination="YoQ-ay-g4G" kind="relationship" relationship="rootViewController" id="5ZR-ne-GT2"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VsW-UF-lsi" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -175,9 +143,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" id="Ukw-VB-8Le">
+                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Don't Touch Not Connected" id="Ukw-VB-8Le">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" red="0.50196081400000003" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="tintColor" red="0.50196081400000003" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <textInputTraits key="textInputTraits"/>
                             <connections>
                                 <outlet property="delegate" destination="YoQ-ay-g4G" id="ISE-Sj-qQw"/>
@@ -214,6 +184,13 @@
                             <outlet property="delegate" destination="YoQ-ay-g4G" id="8ny-0j-MFq"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="bkv-lA-l06">
+                        <barButtonItem key="rightBarButtonItem" title="New Snippet" id="xht-AE-VFf">
+                            <connections>
+                                <segue destination="wq5-NQ-Tia" kind="show" identifier="showCreate" id="v3B-GM-AgK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="searchDisplayController" destination="gvM-c0-Yjb" id="z6x-71-fsg"/>
                         <segue destination="7GU-Wq-Y2s" kind="show" identifier="showDetail" id="ojD-FY-x5c"/>
@@ -230,7 +207,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="113" y="885"/>
+            <point key="canvasLocation" x="-791" y="171"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="xTv-1k-xbM">
@@ -245,7 +222,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jSd-bC-fcr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1215" y="458"/>
+            <point key="canvasLocation" x="-28" y="632"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="v3B-GM-AgK"/>
+        <segue reference="fLu-HT-KPP"/>
+    </inferredMetricsTieBreakers>
 </document>
